toList()を修正